fixed overflow on cart

--- a/app/styles/_header.sass
+++ b/app/styles/_header.sass
@@ -97,5 +97,5 @@
     color: white
 
 .order-main-items-container
-    max-height: 200px
-    overflow: hidden
+    max-height: 150px
+    overflow: scroll
